@@ -12,6 +12,7 @@
 <$parser.lf_patch      = true>	日本語のpタグ中の改行を消す
 <$parser.md_in_htmlblk = true>	Markdown Inside HTML Blocksを許可する
 <$parser.sectioning    = true>	sectionタグを適時挿入する
+<$parser.gmf_ext       = true>	GitHub Flavored Markdown拡張を使用する
 
 <$parser.span_sanchor  = true>	見出し先頭に span.sanchor を挿入する
 <$parser.section_link  = true>	見出しタグにアンカーを挿入する
